# simpsched

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
simpsched/: cli.py  constants.py  db.py  helpers.py  model.py  models.py  prompts.py  steps.py  utils.py  validations.py  view.py
